crates/plotnik-lib/tests/02-parser/recovery_validation/pipe_in_alternation.txt
[(a) | (b) | (c)]
==== diagnostics ====
error: patterns are separated by whitespace
 --> query.ptk:1:6
  |
1 | [(a) | (b) | (c)]
  |      ^
  |
help: remove the `|`
  |
1 - [(a) | (b) | (c)]
1 + [(a)  (b) | (c)]
  |

error: patterns are separated by whitespace
 --> query.ptk:1:12
  |
1 | [(a) | (b) | (c)]
  |            ^
  |
help: remove the `|`
  |
1 - [(a) | (b) | (c)]
1 + [(a) | (b)  (c)]
  |
